--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,7 @@
 @import "components/_chatroom";
 @import "components/_conversation";
 @import "components/_form";
+@import "components/_users";
 
 body {
   margin: 0;
