--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,6 +3,7 @@
 @import "components/_conversation";
 @import "components/_form";
 @import "components/_users";
+@import "components/_message";
 
 body {
   margin: 0;
